IGNITE-22077 Configure add-opens for java-15+.